# mini-claude-code-python

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
chapters/: 01-agent-loop.md  02-tools.md  03-system-prompt.md  04-cli-session.md  05-streaming.md  06-permissions.md  07-context.md
chapters/01-agent-loop/: README.md
chapters/02-tools/: README.md
examples/chapter-01/: agent.py
examples/chapter-02/: agent.py  tools.py
examples/chapter-03/: agent.py  prompt.py  tools.py
examples/chapter-04/: agent.py  ui.py
examples/chapter-05/: agent.py  prompt.py  tools.py  ui.py
examples/chapter-06/: agent.py  session.py  tools.py  ui.py
examples/chapter-07/: agent.py  tools.py  ui.py
scripts/: generate_marketing_assets.py
src/mini_claude/: __init__.py  agent.py  tools.py
tests/: test_examples.py  test_repository.py
