[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-claude-code-python"
version = "0.4.0"
description = "Build a minimal coding agent step by step in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
